<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020-2022 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="dc_dimming_title">DC dimming</string>
    <string name="dc_dimming_summary">Reduces flicker at low brightness; colors may change</string>
    <string name="dc_dimming_unavailable">Not supported by the current kernel</string>

    <!-- Popup camera settings -->
    <string name="popup_screen_effect_title">Camera screen animation</string>
    <string name="popup_screen_effect_summary">Show the MIUI wave animation when the front camera rises and retracts</string>
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Show LED light when the front camera appears and retracts</string>
    <string name="popup_led_color_title">Camera effect color</string>
    <string name="popup_led_color_blue">Blue</string>
    <string name="popup_led_color_red">Red</string>
    <string name="popup_led_color_green">Green</string>
    <string name="popup_led_color_cyan">Cyan</string>
    <string name="popup_led_color_magenta">Magenta</string>
    <string name="popup_led_color_yellow">Yellow</string>
    <string name="popup_led_color_white">White</string>
    <string name="popup_title">Front camera sound effects</string>
    <string name="popup_title_muqin">Xylophone</string>
    <string name="popup_title_yingyan">Condor</string>
    <string name="popup_title_mofa">Magic</string>
    <string name="popup_title_jijia">Mecha</string>
    <string name="popup_title_chilun">Gearwheel</string>
    <string name="popup_title_cangmen">Cabin door</string>

    <!-- Popup camera strings -->
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_times_calibrate">Couldn\'t close front camera multiple times. Try calibrating the camera.</string>
    <string name="popup_camera_popup_failed_times_calibrate">Couldn\'t open front camera multiple times. Try calibrating the camera.</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now.</string>
    <string name="stop_operate_camera_frequently">You\'re opening the front camera too frequently.</string>
    <string name="takeback_camera_front_failed">Couldn\'t close front camera. Try again.</string>
    <string name="popup_camera_front_failed">Couldn\'t open front camera. Try again.</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal Profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>
</resources>
