<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="popup_screen_effect"
        android:summary="@string/popup_screen_effect_summary"
        android:title="@string/popup_screen_effect_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="popup_led_effect"
        android:summary="@string/popup_led_summary"
        android:title="@string/popup_led_title" />

    <Preference
        android:key="popup_led_color"
        android:title="@string/popup_led_color_title" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/popupcamera_effects_entries"
        android:entryValues="@array/popupcamera_effects_values"
        android:key="popup_sound_effect"
        android:title="@string/popup_title"
        app:useSimpleSummaryProvider="true"/>

</PreferenceScreen>
